syntax = "proto3";

package auth;
option go_package = "/protobuf/proto_auth";

service AuthenticationService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string username = 2;
}

message CheckTokenRequest {
    string token = 1;
}

message CheckTokenResponse {
    string username = 1;
}